<resources>
    <string name="app_name">ScoreKeeperApp</string>
    <string name="archer_A">Archer A</string>
    <string name="reset">Reset</string>
    <string name="num_0">0</string>
    <string name="num_10">10</string>
    <string name="num_9">9</string>
    <string name="num_8">8</string>
    <string name="num_7">7</string>
    <string name="num_6">6</string>
    <string name="num_5">5</string>
    <string name="num_4">4</string>
    <string name="num_3">3</string>
    <string name="num_2">2</string>
    <string name="num_1">1</string>
    <string name="archer_B">Archer B</string>
    <string name="play">Start Playing</string>
    <string name="desc">The Archery Score Keeper</string>
</resources>
