<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/back"
    tools:context="com.example.ojasvi.scorekeeperapp.MainActivity">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="@dimen/dimen_16dp"
                    android:text="@string/archer_A"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/dimen_18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/archer_1_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dimen_24dp"
                    android:text="@string/num_0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_56sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:layout_marginLeft="@dimen/dimen_24dp"
                    android:layout_marginRight="@dimen/dimen_24dp"
                    android:background="@color/yellow"
                    android:onClick="add10ForArch1"
                    android:text="@string/num_10"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:layout_marginLeft="@dimen/dimen_24dp"
                    android:layout_marginRight="@dimen/dimen_24dp"
                    android:background="@color/yellow"
                    android:onClick="add9ForArch1"
                    android:text="@string/num_9"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:layout_marginLeft="@dimen/dimen_24dp"
                    android:layout_marginRight="@dimen/dimen_24dp"
                    android:background="@color/red"
                    android:onClick="add8ForArch1"
                    android:text="@string/num_8"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:layout_marginLeft="@dimen/dimen_24dp"
                    android:layout_marginRight="@dimen/dimen_24dp"
                    android:background="@color/red"
                    android:onClick="add7ForArch1"
                    android:text="@string/num_7"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:layout_marginLeft="@dimen/dimen_24dp"
                    android:layout_marginRight="@dimen/dimen_24dp"
                    android:background="@color/blue"
                    android:onClick="add6ForArch1"
                    android:text="@string/num_6"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:layout_marginLeft="@dimen/dimen_24dp"
                    android:layout_marginRight="@dimen/dimen_24dp"
                    android:background="@color/blue"
                    android:onClick="add5ForArch1"
                    android:text="@string/num_5"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:layout_marginLeft="@dimen/dimen_24dp"
                    android:layout_marginRight="@dimen/dimen_24dp"
                    android:background="@color/black"
                    android:onClick="add4ForArch1"
                    android:text="@string/num_4"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:layout_marginLeft="@dimen/dimen_24dp"
                    android:layout_marginRight="@dimen/dimen_24dp"
                    android:background="@color/black"
                    android:onClick="add3ForArch1"
                    android:text="@string/num_3"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:layout_marginLeft="@dimen/dimen_24dp"
                    android:layout_marginRight="@dimen/dimen_24dp"
                    android:background="@android:color/white"
                    android:onClick="add2ForArch1"
                    android:text="@string/num_2"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:layout_marginLeft="@dimen/dimen_24dp"
                    android:layout_marginRight="@dimen/dimen_24dp"
                    android:background="@android:color/white"
                    android:onClick="add1ForArch1"
                    android:text="@string/num_1"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="@dimen/dimen_1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_150dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="@dimen/dimen_16dp"
                    android:text="@string/archer_B"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/dimen_18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/archer_2_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dimen_24dp"
                    android:text="@string/num_0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_56sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:layout_marginLeft="@dimen/dimen_24dp"
                    android:layout_marginRight="@dimen/dimen_24dp"
                    android:background="@color/yellow"
                    android:onClick="add10ForArch2"
                    android:text="@string/num_10"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:layout_marginLeft="@dimen/dimen_24dp"
                    android:layout_marginRight="@dimen/dimen_24dp"
                    android:background="@color/yellow"
                    android:onClick="add9ForArch2"
                    android:text="@string/num_9"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:layout_marginLeft="@dimen/dimen_24dp"
                    android:layout_marginRight="@dimen/dimen_24dp"
                    android:background="@color/red"
                    android:onClick="add8ForArch2"
                    android:text="@string/num_8"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:layout_marginLeft="@dimen/dimen_24dp"
                    android:layout_marginRight="@dimen/dimen_24dp"
                    android:background="@color/red"
                    android:onClick="add7ForArch2"
                    android:text="@string/num_7"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:layout_marginLeft="@dimen/dimen_24dp"
                    android:layout_marginRight="@dimen/dimen_24dp"
                    android:background="@color/blue"
                    android:onClick="add6ForArch2"
                    android:text="@string/num_6"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:layout_marginLeft="@dimen/dimen_24dp"
                    android:layout_marginRight="@dimen/dimen_24dp"
                    android:background="@color/blue"
                    android:onClick="add5ForArch2"
                    android:text="@string/num_5"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:layout_marginLeft="@dimen/dimen_24dp"
                    android:layout_marginRight="@dimen/dimen_24dp"
                    android:background="@color/black"
                    android:onClick="add4ForArch2"
                    android:text="@string/num_4"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:layout_marginLeft="@dimen/dimen_24dp"
                    android:layout_marginRight="@dimen/dimen_24dp"
                    android:background="@color/black"
                    android:onClick="add3ForArch2"
                    android:text="@string/num_3"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:layout_marginLeft="@dimen/dimen_24dp"
                    android:layout_marginRight="@dimen/dimen_24dp"
                    android:background="@android:color/white"
                    android:onClick="add2ForArch2"
                    android:text="@string/num_2"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:layout_marginLeft="@dimen/dimen_24dp"
                    android:layout_marginRight="@dimen/dimen_24dp"
                    android:background="@android:color/white"
                    android:onClick="add1ForArch2"
                    android:text="@string/num_1"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/image"
            android:layout_width="@dimen/dimen_150dp"
            android:layout_height="@dimen/dimen_100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:src="@drawable/target" />


        <Button
            android:id="@+id/resetAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:layout_centerHorizontal="true"
            android:onClick="ResetAll"
            android:text="@string/reset"
            android:textAllCaps="false" />


    </RelativeLayout>


</android.support.v4.widget.NestedScrollView>
